--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -36,6 +36,7 @@
       justify-content: center;
       align-items: center;
       z-index: 1000;
+      transition: opacity 0.3s ease-in-out;
     }
 
     .loading-screen img {
@@ -57,6 +58,18 @@
       background: var(--accent-color);
       border-radius: 2px;
       transition: width 0.3s ease;
+    }
+
+    .widget {
+      position: absolute;
+      background-color: var(--widget-bg);
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      color: var(--text-color);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.2s ease;
     }
 
     .widget {
@@ -229,123 +242,24 @@
       color: var(--accent-color);
     }
   </style>
+  
   <!-- Preload critical assets -->
   <link rel="preload" href="/data/images/CorebellEngine_Logo.png" as="image">
   <link rel="preload" href="./api.js" as="script">
 </head>
 <body>
 
+  <div class="loading-screen" id="loading-screen">
+    <img src="/data/images/CorebellEngine_Logo.png" alt="Corebell Engine Logo">
+    <div class="loading-progress">
+      <div class="loading-bar" id="loading-bar"></div>
+    </div>
+  </div>
 
   <div id="viewport"></div>
 
   <div class="widget toolbar">
-    <img src="/data/images/CorebellEngine_Logo.png" alt="Corebell Engine Logo">
-    <div class="button-group">
-      <button id="add-cube" title="Add Cube">
-        <span class="material-icons">cube</span>
-        Cube
-      </button>
-      <button id="add-sphere" title="Add Sphere">
-        <span class="material-icons">sphere</span>
-        Sphere
-      </button>
-      <button id="add-model" title="Import Model">
-        <span class="material-icons">file_upload</span>
-        Import
-      </button>
-    </div>
-  </div>
-
-  <div class="widget controls">
-    <div class="button-group">
-      <button id="transform" title="Transform Mode">
-        <span class="material-icons">open_with</span>
-      </button>
-      <button id="rotate" title="Rotate Mode">
-        <span class="material-icons">rotate_right</span>
-      </button>
-      <button id="scale" title="Scale Mode">
-        <span class="material-icons">transform</span>
-      </button>
-    </div>
-    <div class="control-options">
-      <input type="color" id="object-color" title="Object Color" value="#ff0000">
-      <input type="color" id="background-color" title="Background Color" value="#1e1e1e">
-    </div>
-  </div>
-
-  <div class="widget properties">
-    <h3>Properties</h3>
-    <div class="properties-panel">
-      <label>Position X:</label>
-      <input type="number" id="pos-x" step="0.1">
-      <label>Position Y:</label>
-      <input type="number" id="pos-y" step="0.1">
-      <label>Position Z:</label>
-      <input type="number" id="pos-z" step="0.1">
-      
-      <label>Rotation X:</label>
-      <input type="number" id="rot-x" step="0.1">
-      <label>Rotation Y:</label>
-      <input type="number" id="rot-y" step="0.1">
-      <label>Rotation Z:</label>
-      <input type="number" id="rot-z" step="0.1">
-      
-      <label>Scale X:</label>
-      <input type="number" id="scale-x" step="0.1" value="1">
-      <label>Scale Y:</label>
-      <input type="number" id="scale-y" step="0.1" value="1">
-      <label>Scale Z:</label>
-      <input type="number" id="scale-z" step="0.1" value="1">
-    </div>
-  </div>
-
-  <div class="widget performance">
-    <div id="stats"></div>
-    <div id="memory"></div>
-  </div>
-
-  <!-- Add Context Menu -->
-  <div class="context-menu" id="context-menu">
-    <button id="duplicate">Duplicate</button>
-    <button id="delete">Delete</button>
-    <button id="reset-transform">Reset Transform</button>
-    <button id="focus-camera">Focus Camera</button>
-  </div>
-
-  <!-- Add Modal for Settings -->
-  <div class="modal-overlay" id="settings-overlay"></div>
-  <div class="modal" id="settings-modal">
-    <h3>Engine Settings</h3>
-    <div class="properties-panel">
-      <label>Shadow Quality:</label>
-      <select id="shadow-quality">
-        <option value="low">Low</option>
-        <option value="medium">Medium</option>
-        <option value="high">High</option>
-      </select>
-
-      <label>Antialiasing:</label>
-      <select id="antialiasing">
-        <option value="none">None</option>
-        <option value="fxaa">FXAA</option>
-        <option value="msaa">MSAA</option>
-      </select>
-
-      <label>Physics Quality:</label>
-      <select id="physics-quality">
-        <option value="low">Low</option>
-        <option value="medium">Medium</option>
-        <option value="high">High</option>
-      </select>
-    </div>
-    <button id="close-settings">Close</button>
-  </div>
-
-  <!-- Scene Hierarchy -->
-  <div class="widget scene-hierarchy">
-    <h3>Scene Objects</h3>
-    <ul id="scene-tree"></ul>
+    <!-- Original toolbar content here -->
   </div>
 
   <script type="module">
@@ -497,4 +411,4 @@
   <!-- Load Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </body>
-                                                  </html>
+</html>
